<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pages_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/login_account_circle_icon_description"
        android:src="@drawable/login_account_circle" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_corner"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_corner"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="@string/register_button_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password_text"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>