<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pages_background"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Profile"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp" />

    <!-- PROFILE IMAGE -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/login_account_circle_icon_description"
        android:src="@drawable/login_account_circle" />

    <TextView
        android:id="@+id/profile_details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_image"
        android:layout_alignBottom="@id/profile_image"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@id/profile_image"
        android:gravity="center_vertical"
        android:text="User Details Here\n(e.g., Name, Email)"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <!-- Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        app:menu="@menu/bottom_navigation_menu" />

    <!-- My Goals -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="316dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Goals"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/black"
            android:text="@string/view_goals_button_text" />
    </RelativeLayout>

    <!-- My Workouts -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="219dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Workouts"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/black"
            android:text="@string/view_workouts_button_text" />
    </RelativeLayout>

    <!-- Recipes -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="115dp"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recipes"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/black"
            android:text="@string/view_recipies_button_text" />
    </RelativeLayout>

    <!-- Account Actions -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="29dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/black"
            android:text="Change Password" />

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/black"
            android:text="Sign Out" />
    </RelativeLayout>

</RelativeLayout>
